Fix bug where long operator names can result in column misalignment
Fixes https://jira.coreos.com/browse/CONSOLE-1598

--- a/frontend/public/components/operator-lifecycle-manager/_operator-lifecycle-manager.scss
+++ b/frontend/public/components/operator-lifecycle-manager/_operator-lifecycle-manager.scss
@@ -13,12 +13,13 @@
 }
 
 .co-clusterserviceversion-logo__icon {
-  background: #fff;
-  width: 60px;
-  height: 60px;
-  display: flex;
-  justify-content: center;
   align-items: center;
+  background: #fff;
+  display: flex;
+  flex: 0 0 auto;
+  height: 60px;
+  justify-content: center;
+  width: 60px;
 }
 
 .co-m-nav-title--logo .co-clusterserviceversion-logo__icon {
